docs/apache-airflow-providers-cncf-kubernetes/2.2.0/_sources/_api/airflow/providers/cncf/kubernetes/operators/spark_kubernetes/index.rst.txt
:mod:`airflow.providers.cncf.kubernetes.operators.spark_kubernetes`
===================================================================

.. py:module:: airflow.providers.cncf.kubernetes.operators.spark_kubernetes


Module Contents
---------------

.. py:class:: SparkKubernetesOperator(*, application_file: str, namespace: Optional[str] = None, kubernetes_conn_id: str = 'kubernetes_default', api_group: str = 'sparkoperator.k8s.io', api_version: str = 'v1beta2', **kwargs)

   Bases: :class:`airflow.models.BaseOperator`

   Creates sparkApplication object in kubernetes cluster:

   .. seealso::
       For more detail about Spark Application Object have a look at the reference:
       https://github.com/GoogleCloudPlatform/spark-on-k8s-operator/blob/v1beta2-1.1.0-2.4.5/docs/api-docs.md#sparkapplication

   :param application_file: Defines Kubernetes 'custom_resource_definition' of 'sparkApplication' as either a
       path to a '.json' file or a JSON string.
   :type application_file:  str
   :param namespace: kubernetes namespace to put sparkApplication
   :type namespace: str
   :param kubernetes_conn_id: The :ref:`kubernetes connection id <howto/connection:kubernetes>`
       for the to Kubernetes cluster.
   :type kubernetes_conn_id: str
   :param api_group: kubernetes api group of sparkApplication
   :type api_group: str
   :param api_version: kubernetes api version of sparkApplication
   :type api_version: str

   .. attribute:: template_fields
      :annotation: = ['application_file', 'namespace']

      

   .. attribute:: template_ext
      :annotation: = ['.yaml', '.yml', '.json']

      

   .. attribute:: ui_color
      :annotation: = #f4a460

      

   
   .. method:: execute(self, context)




